# nvidia-kaggle

./: .gitignore  BENCHMARK.md  CLA.md  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  new-workflow-request.md
.github/workflows/: license.yml  test.yml
demo/competition-intel-briefing/: DESIGN.md  EXHIBITS.md  README.md  analyze_run.py  llm-20-questions_briefing.md  run.sh  run_demo.sh
skills/nvidia-kaggle-skill/: SKILL.md  kernels.md  research-brief.md  submission.md  writeups.md
skills/nvidia-kaggle-skill/evals/: config.yml  evals.json  grader.py
skills/nvidia-kaggle-skill/scripts/: browser.py  constants.py  db_info.py  diff_kernel_versions.py  discussion_db_info.py  discussion_ingest.py  discussion_query.py  discussion_read.py  fetch_competition_info.py  fetch_dataset_info.py  fetch_kernel_score.py  fetch_leaderboard_writeups.py  fetch_top_kernel_scores.py  fetch_writeup.py  generate_briefing.py  kaggle_markdown_export.py  kernel_archive.py  kernel_db_info.py  kernel_ingest.py  kernel_query.py  kernel_read.py  runtime.py  submission_history.py  (+6 more)
tests/: agent_acceptance_test.md  conftest.py  test_claude_plugin_install.py  test_codex_plugin_structure.py  test_day_one_skill_contracts.py  test_plugin_structure.py  test_submission_history.py
tests/nvbase/: .gitignore  README.md  patch_harbor_kaggle.py  run_tier1.sh  run_tier2.sh  run_tier3.sh
(+243 files in other folders)
