[project]
name = "nvidia-kaggle"
version = "0.1.0"
description = "Plugin for Kaggle competition workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "claude-agent-sdk",
    "httpx",
    "kaggle>=1.7.4.5",
    "kagglesdk",
    "nbformat",
    "numpy",
    "pandas",
    "playwright",
    "playwright-stealth",
    "pydantic",
    "pytest",
    "python-dotenv",
    "rich",
    "scikit-learn",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: tests that hit the real Kaggle API (require KAGGLE_API_TOKEN)"]
norecursedirs = [
    "reports",
    ".venv",
    "dist",
    "build",
    "data",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "skills",
    "README.md",
    "CONTRIBUTING.md",
    "LICENSE",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/tests/nvbase/reports/**",
    "/.pytest_cache/**",
    "/.venv/**",
    "/dist/**",
    "/data/**",
    "/rapids-svd-oof-0-80/**",
    "/titanic-wcg-xgboost-0-84688/**",
]
